--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ url: #Your url here
 baseurl: /project
 
 # variables
-name: Your Site Name
-description: Your description here
+name: Uneven Prankster
+description: Gamedev, content creator, also has a blog you're staring at right now.
 google_verification: null
 
 
